--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ ul {
 
 img {
   display: block;
+  width: 100%;
   max-width: 100%;
   height: auto;
 }
@@ -92,15 +93,60 @@ body {
 }
 /* ================================================================= COMPONENTS ================================================================== */
 
-/*  ------ [BASIC CONTAINER] ------ */
+/* -------------------------------------------------- [SPECIAL CLASSES FOR HIDING & BLOCKING] ---------------------------------------------------- */
 
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+/*  --------------------------------------------------------------- [CONTAINERS] ----------------------------------------------------------------- */
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
+  padding: 0 16px;
   margin: 0 auto;
 }
 
-/*  --------- [BASIC BUTTON] --------- */
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 16px;
+  margin: 0 auto;
+}
+
+.container-mini {
+  max-width: 264px;
+  margin: 0 auto;
+}
+
+.filter-container {
+  max-width: 310px;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 72px;
+}
+
+/*  ---------------------------------------------------------- [BUTTON BASIC STYLE] -------------------------------------------------------------- */
 
 .basic-button {
   font-family: inherit;
@@ -117,18 +163,22 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.basic-button :active {
+  background-color: var(--active-links-color);
+}
+
 .basic-button:hover,
 .basic-button:focus {
   background-color: var(--accent-color);
 }
 
-/*  -------- [WEB-STUDIO LOGO] ---------- */
+/*  --------------------------------------------------------------- [WEB-STUDIO LOGO] ----------------------------------------------------------------- */
 
 .logo-invariable-part,
 .logo-dark-part,
 .logo-light-part {
   font-family: 'Raleway', sans-serif;
-  /* font-weight: 800;                                                                                             ====> the only pre-connected font of the above-mentioned font-family*/
+  /* font-weight: 800;                                                              ====> the only pre-connected font of the above-mentioned font-family*/
   font-size: 18px;
   line-height: 1.33;
   letter-spacing: 0.03em;
@@ -147,15 +197,11 @@ body {
   color: var(--logo-light-part-color);
 }
 
-/* --------------- [SECTION] -------------- */
+/* --------------------------------------------------------------- [SECTION BASIC STYLE] -------------------------------------------------------------- */
 
 .section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.dark-theme-section {
-  background-color: var(--dark-sections-color);
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .section-title {
@@ -167,193 +213,237 @@ body {
   text-align: center;
 }
 
-/*  --------- [SOCIAL NETWORKS ICONS] ---------- */
+/*  -------------------------------------------------------------- [SOCIAL NETWORKS ICONS] -------------------------------------------------------------- */
 
 .social-network-icon {
   fill: var(--social-media-icons-color);
 }
 
-/*  --------- [SPECIAL CLASS FOR HIDING] ---------- */
-
-.visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
-/* ===================================================================== HEADER ====================================================================== */
+/* ===================================================================== [HEADER] ====================================================================== */
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid var(--borders-main-color);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-container {
-  display: flex;
+.header-menu {
+  display: none;
 }
 
-.header-navigation {
-  display: flex;
+.header-address {
+  display: none;
 }
 
-.menu {
-  display: flex;
-  margin-left: 76px;
-  gap: 40px;
-}
+/* ------------------------------------------------------------------- HEADER MOBILE MENU -------------------------------------------------------------- */
 
-.menu-link {
-  font-weight: 500;
-  color: var(--main-titles-color);
-  /* Розширення зони кліку */
-  padding-top: 24px;
-  padding-bottom: 28px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-link:hover,
-.menu-link:focus {
-  color: var(--accent-color);
-}
-
-.menu-current-page {
-  color: var(--accent-color);
-  position: relative;
-}
-
-.menu-current-page::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-}
-
-.address {
+.mobile-menu-open-btn {
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
+  padding: 0;
   margin-left: auto;
 }
 
-.contact-list {
-  display: flex;
-  gap: 40px;
+.open-btn-icon {
+  stroke: #2e2f42;
 }
 
-.contact-link {
-  font-style: normal;
-  color: var(--main-text-color);
-  /* Розширення зони кліку */
-  padding-top: 24px;
-  padding-bottom: 28px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-link:hover,
-.contact-link:focus {
+.open-btn-icon:active {
   color: var(--accent-color);
 }
 
-/* ======================================================================== MAIN PAGE / HERO SECTION ========================================================================= */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 40px;
+  padding-right: 24px;
+  background-color: #ffffff;
+  transform: scale(1);
+  transition: transform 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-hidden {
+  transition: opacity 2000ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 2000ms cubic-bezier(0.4, 0, 0.2, 1), transform 2000ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(0);
+}
+
+.mobile-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.mobile-menu-link {
+  color: var(--main-titles-color);
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-link:focus {
+  color: var(--active-links-color);
+}
+
+.mobile-menu-link:active {
+  color: var(--accent-color);
+}
+
+.mobile-menu-address {
+  font-style: normal;
+}
+
+.mobile-contact-link {
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-contact-link:focus {
+  color: var(--active-links-color);
+}
+
+.mobile-contact-link:active {
+  color: var(--accent-color);
+}
+
+.mobile-menu-tel {
+  margin-bottom: 40px;
+  color: var(--main-text-color);
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.11;
+}
+
+.mobile-menu-mail {
+  margin-bottom: 48px;
+  color: var(--main-text-color);
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
+.mobile-menu-media-set {
+  display: flex;
+  gap: 25px;
+}
+
+.mobile-menu-media-item {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: var(--social-media-icons-bg-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu-media-link:focus {
+  background-color: var(--footer-icons-hover-bg);
+}
+
+.mobile-menu-media-link:active {
+  background-color: turquoise;
+  border: 2px solid #000000;
+}
+/* ======================================================================= MAIN PAGE / [HERO SECTION] ======================================================================== */
 
 .hero-section {
   background-color: var(--hero-and-footer-background-color);
-  background-image: var(--main-overlay-color), url(../images/hero-bg-image.jpg);
+  background-image: var(--main-overlay-color), url(../images/hero-mobile-bg-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
-  text-align: center;
   margin: 0 auto;
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   max-width: 1440px;
 }
 
-.hero-title {
-  /* font-weight: 700;                                                                                            ====> basic <h> font-weight (bold), predefined by a browser by default */
-  font-size: 56px;
-  line-height: 1.07;
-  color: var(--hero-titles-color);
-  margin-top: 0;
-  margin-bottom: 48px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 500px;
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: var(--main-overlay-color), url(../images/hero-mobile-bg-2x.jpg);
+  }
 }
 
-/* ====================================================================== MAIN PAGE / ADVANTAGES SECTION ======================================================================= */
+.hero-title {
+  color: var(--hero-titles-color);
+  font-size: 30px;
+  max-width: 260px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* ================================================================= MAIN PAGE / ADVANTAGES SECTION ================================================================== */
 
 .advantage-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .advantage-item {
-  width: calc((100% - 3 * 24px) / 4);
+  width: 100%;
 }
 
 .advantage-image {
-  background-color: var(--advantage-icons-bg-color);
-
-  padding: 24px 100px;
-  margin-bottom: 8px;
+  display: none;
 }
 
 .advantage-title {
+  text-align: center;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   color: var(--main-titles-color);
-
   margin-bottom: 8px;
 }
 
 .advantage-description {
   color: var(--main-text-color);
+  font-weight: 500;
+  text-align: justify;
 }
 
-/* ====================================================================== MAIN PAGE / SERVICES SECTION ======================================================================= */
+/* ================================================================== MAIN PAGE / SERVICES SECTION =================================================================== */
 
 .services-section {
-  padding-top: 0;
-  padding-bottom: 120px;
+  display: none;
 }
-
-.service-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
+/* ==================================================================== MAIN PAGE / TEAM SECTION ===================================================================== */
+.team-section {
+  padding-top: 96px;
+  padding-bottom: 128px;
+  background-color: var(--dark-sections-color);
 }
-
-.service-item {
-  width: calc((100% - 2 * 24px) / 3);
-}
-
-/* ====================================================================== MAIN PAGE / OUR TEAM SECTION ======================================================================= */
 
 .team-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  gap: 72px;
 }
 
 .team-member-card {
-  width: calc((100% - 3 * 24px) / 4);
+  width: 100%;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -374,7 +464,6 @@ body {
 }
 
 .team-member-position {
-  color: var(--main-text-color);
   margin-bottom: 8px;
 }
 
@@ -404,29 +493,30 @@ body {
   background-color: var(--accent-color);
 }
 
-/* ====================================================================== MAIN PAGE / CUSTOMERS SECTION ======================================================================= */
+/* ================================================================= MAIN PAGE / CUSTOMERS SECTION ================================================================== */
 
 .customers-section {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 .customer-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 72px;
 }
 
 .customer-item {
-  width: calc((100% - 5 * 24px) / 6);
+  width: calc((100% - 16px) / 2);
   height: 88px;
 }
 
 .customer-company-link {
-  display: block;
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
-  padding: 16px 32px;
   border: 1px solid var(--customer-icons-main-color);
   border-radius: 4px;
   color: var(--customer-icons-main-color);
@@ -455,8 +545,9 @@ body {
 
 .project-category-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 16px;
   margin-bottom: 72px;
 }
 
@@ -467,7 +558,7 @@ body {
   color: var(--buttons-titles-color);
   background-color: var(--buttons-background-color);
   border: 1px solid var(--borders-main-color);
-  padding: 12px 24px;
+  padding: 8px 16px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -482,6 +573,10 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.portfolio-button:active {
+  color: var(--active-links-color);
+}
+
 /*  --------------------------------- [POTFOLIO PROJECT SET] --------------------------------- */
 
 .project-list {
@@ -492,7 +587,7 @@ body {
 }
 
 .project-card {
-  width: calc((100% - 2 * 24px) / 3);
+  width: 100%;
 }
 
 .project-card-link {
@@ -555,28 +650,36 @@ body {
 
 .footer {
   background-color: var(--hero-and-footer-background-color);
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.footer-container {
-  display: flex;
-  align-items: baseline;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 
 /*  ------------------- [FOOTER LEFT PART] ------------------ */
 
 .left-footer-part-container {
-  margin-right: 120px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+  /* margin-right: 120px; */
 }
 
 .footer-text {
   color: var(--footer-text-color);
   max-width: 265px;
-  margin-top: 16px;
+  /* margin-top: 16px; */
 }
 
 /*  ------------------ [FOOTER MEDIA SET] ------------------ */
+
+.footer-media-block {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  flex-direction: column;
+  gap: 16px;
+}
 
 .footer-media-list {
   display: flex;
@@ -586,7 +689,6 @@ body {
 
 .footer-media-list-title,
 .footer-subscription-title {
-  margin-bottom: 16px;
   font-weight: 500;
   color: var(--footer-text-color);
 }
@@ -615,16 +717,24 @@ body {
 /*  ------------------ [FOOTER SIGN-UP FORM] ------------------ */
 
 .footer-subscription-field {
-  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
 .footer-subscription-form {
   display: flex;
-  gap: 24px;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 
 .signup-input {
-  width: 264px;
+  width: 100%;
   height: 40px;
   padding: 8px 16px;
   font-size: var(--basic-input-font-size);
@@ -671,7 +781,7 @@ body {
   fill: var(--signup-main-color);
 }
 
-/* ======================================================================== MODAL WINDOW ========================================================================= */
+/* ====================================================================== MODAL WINDOW ======================================================================= */
 
 .backdrop {
   position: fixed;
@@ -682,14 +792,7 @@ body {
 
   width: 100%;
   height: 100%;
-
   background-color: var(--backdrop-color);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
 }
 
 .modal-window {
@@ -699,8 +802,8 @@ body {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  width: 408px;
-  min-height: 584px;
+  min-width: 100%;
+  min-height: 100%;
   padding: 24px;
 
   background-color: var(--modal-bg-color);
@@ -723,7 +826,7 @@ body {
   margin-left: auto;
   width: 24px;
   height: 24px;
-  font-size: 0;
+  padding: 0;
 
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -740,7 +843,7 @@ body {
   fill: currentColor;
 }
 
-/*  ---------------- [DATA ENTRY FORM] ---------------- */
+/* =================================================================== DATA ENTRY FORM ==================================================================== */
 
 .modal-form-title {
   margin-top: 24px;
@@ -837,6 +940,9 @@ body {
 
 .checkbox-area {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: justify;
   font-size: var(--basic-input-font-size);
   line-height: 1.33;
   letter-spacing: 0.04em;
