Fixed bugs of my adaptive markup acocrding to mentor's feedback

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -12,11 +12,18 @@
     gap: 56px;
   }
 
-  /* ========================================================================= MODAL FORM =========================================================================== */
-
+  /* ======================================================================== MODAL WINDOW =========================================================================== */
   .modal-window {
-    min-width: 392px;
-    min-height: 586px;
+    height: 586px;
+    max-width: 408px;
+
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .modal-checkbox-field {
+    margin-bottom: 24px;
   }
 
   /* ================================================================== MAIN PAGE / [HERO SECTION] =================================================================== */
@@ -49,8 +56,6 @@
   }
 
   /* ====================================================================== PORTFOLIO PAGE / PORTFOLIO SECTION ======================================================================= */
-
-  /*  ------------------ [PORTFOLIO PROJECTS FILTER] ------------------ */
 
   /* ============================================================================ FOOTER ============================================================================= */
 
