--- a/css/desktop.css
+++ b/css/desktop.css
@@ -147,4 +147,15 @@
   .footer-subscription-field {
     margin-left: auto;
   }
+  /* ======================================================================== MODAL WINDOW =========================================================================== */
+  .modal-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .backdrop.is-hidden .modal-window {
+    transform: translate(-50%, -50%);
+  }
 }
