--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
+  justify-content: center;
 }
 
 /*  ---------------------------------------------------------- [BUTTON BASIC STYLE] -------------------------------------------------------------- */
@@ -410,7 +411,7 @@ body {
 
 .advantage-title {
   text-align: center;
-  font-weight: 500;
+  font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -787,6 +788,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  overflow: scroll;
   transition: opacity 1250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -797,13 +799,11 @@ body {
 
 .modal-window {
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translateX(-50%) scale(1);
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  min-width: 100%;
-  min-height: 100%;
   padding: 24px;
 
   background-color: var(--modal-bg-color);
@@ -813,15 +813,12 @@ body {
 }
 
 .backdrop.is-hidden .modal-window {
-  transform: translate(-50%, -50%) scale(0);
+  transform: translateX(-50%) scale(0);
 }
 
 /*  ------------------------ [MODAL CLOSING BUTTON] ------------------------ */
 
 .close-modal-btn {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   display: block;
   margin-left: auto;
   width: 24px;
@@ -831,6 +828,8 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   color: #000000;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-modal-btn:hover,
@@ -906,7 +905,7 @@ body {
 /*  ------------------ [MODAL COMMENT FIELD] ------------------ */
 
 .modal-comment-field {
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .modal-comment-area {
