--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,7 @@ body {
 
 /*  --------------------------------------------------------------- [CONTAINERS] ----------------------------------------------------------------- */
 .container {
+  max-width: 1158px;
   padding: 0 16px;
   margin: 0 auto;
 }
@@ -136,6 +137,12 @@ body {
   margin: 0 auto;
 }
 
+.customers-container {
+padding: 0 16px;
+margin: 0 auto;
+outline: 2px solid palevioletred;
+}
+
 .filter-container {
   max-width: 310px;
 }
@@ -145,6 +152,8 @@ body {
   flex-wrap: wrap;
   gap: 72px;
   justify-content: center;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 /*  ---------------------------------------------------------- [BUTTON BASIC STYLE] -------------------------------------------------------------- */
@@ -764,18 +773,15 @@ body {
 
   background-color: var(--buttons-titles-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  color: var(--signup-main-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .signup-button:hover,
 .signup-button:focus {
   background-color: var(--accent-color);
-}
-
-.signup-button-title {
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  color: var(--signup-main-color);
 }
 
 .signup-icon {
@@ -794,14 +800,17 @@ body {
 
   width: 100%;
   height: 100%;
+
   background-color: var(--backdrop-color);
 }
 
 .modal-window {
   position: absolute;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%) scale(1);
+  width: 100%;
+  height: 100%;
+
+  transform: scale(1);
   transition: transform 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   padding: 24px;
@@ -813,7 +822,7 @@ body {
 }
 
 .backdrop.is-hidden .modal-window {
-  transform: translateX(-50%) scale(0);
+  transform: scale(0);
 }
 
 /*  ------------------------ [MODAL CLOSING BUTTON] ------------------------ */
