Installed right padding to section in desktop version of the site

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -19,6 +19,10 @@
     row-gap: 0;
   }
 
+  .section {
+  padding: 120px 0;
+  }
+
   /* ===================================================================== HEADER ====================================================================== */
 
   .header {
